--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
 	"type": "module",
 	"scripts": {
 		"dev": "vite dev",
-		"build": "vite build"
+		"build": "vite build",
+		"seed": "bun run prisma/seed.ts"
 	},
 	"private": true,
 	"devDependencies": {
@@ -17,10 +18,25 @@
 		"typescript": "^5.8.3"
 	},
 	"dependencies": {
+		"@faker-js/faker": "^9.9.0",
+		"@iconify/react": "^6.0.0",
+		"@prisma/client": "^6.12.0",
+		"@tailwindcss/vite": "^4.1.11",
+		"@tanstack/react-form": "^1.14.1",
+		"@tanstack/react-query": "^5.83.0",
+		"@tanstack/react-query-devtools": "^5.83.0",
 		"@tanstack/react-router": "^1.128.3",
+		"@tanstack/react-router-devtools": "^1.128.4",
 		"@tanstack/react-start": "^1.128.3",
+		"argon2": "^0.43.1",
+		"class-variance-authority": "^0.7.1",
+		"prisma": "^6.12.0",
 		"react": "^19.1.0",
+		"react-cookie": "^8.0.1",
 		"react-dom": "^19.1.0",
-		"vite": "^7.0.5"
+		"tailwind-merge": "^3.3.1",
+		"tailwindcss": "^4.1.11",
+		"vite": "^7.0.5",
+		"zod": "^4.0.5"
 	}
 }
