--- a/package.json
+++ b/package.json
@@ -28,14 +28,17 @@
 		"@tanstack/react-router": "^1.128.3",
 		"@tanstack/react-router-devtools": "^1.128.4",
 		"@tanstack/react-start": "^1.128.3",
+		"@tanstack/react-table": "^8.21.3",
 		"argon2": "^0.43.1",
 		"class-variance-authority": "^0.7.1",
+		"nuqs": "^2.4.3",
 		"prisma": "^6.12.0",
 		"react": "^19.1.0",
 		"react-cookie": "^8.0.1",
 		"react-dom": "^19.1.0",
 		"tailwind-merge": "^3.3.1",
 		"tailwindcss": "^4.1.11",
+		"use-debounce": "^10.0.5",
 		"vite": "^7.0.5",
 		"zod": "^4.0.5"
 	}
